--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ Palembang, South Sumatera
 https://vcone.github.io/public/flash/demo1.html
 -->
 <head><title>Indonesian Flag Animated</title>
-<script type="text/javascript" src="/js/csjs.js"></script>
+<script type="text/javascript" src="/js/csp.js"></script>
 TEST: Displaying SWF with JavaScript and HTML5 Canvas... 
 
 <div id="myFlashDiv" style="width:800px; height:800px;">
