--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@ TEST: Displaying SWF with JavaScript and HTML5 Canvas...
 </div>
 <script type="text/javascript">
 var mySWF = swf2js;
-mySWF.load('simulasi/mtk.swf', {"tagId": "myFlashDiv"});
+mySWF.load('simulasi/2.-Simulasi-B-Inggris-SMP.swf', {"tagId": "myFlashDiv"});
 </script>
